syntax = "proto3";
package auth.service;

option java_multiple_files = true;
option java_package = "dev.ngdangkiet.dkmicroservices.auth.protobuf";
option java_outer_classname = "AuthProtobuf";

message PLoginRequest {
  string email = 1;
  string password = 2;
}

message PLoginResponse {
  message UserInfo {
    int64 id = 1;
    string full_name = 2;
    string email = 3;
  }
  int32 code = 1;
  string token = 2;
  UserInfo user_info = 3;
}